fix visibility issue and cross button

--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,19 @@ h1 {
 }
 
 button {
+  background-color: rgba(0, 255, 255, 0.9);
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
+  background-color: aqua;
 }
 button:focus,
 button:focus-visible {
@@ -58,12 +59,9 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: rgba(0, 255, 255, 0.9);
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
